<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="title_app_name">SmartPillAlarm</string>

    <string name="button_text_login">로그인</string>
    <string name="button_text_start">시작하기</string>

    <string name="simple_date_format">yyyy년 MM월 dd일 EE요일 a hh시 mm분</string>

    <string name="button_text_alarm_generator">알람 생성</string>
    <string name="warning_number_of_alarm_exceeds_limitation">지정된 알람이 너무 많습니다!</string>
    <string name="message_alarm_generated">yyyy년 MM월 dd일 EE요일 a hh시 mm분에 알람이 설정되었습니다.</string>

    <string name="channel_alarm_notification_name">복약 알림</string>
    <string name="channel_alarm_notification_description">복약하셔야 할 약이 있는지 알려드려요!</string>
    <string name="notification_auto_channel_content_title">복약 알림</string>
    <string name="notification_auto_channel_content_text">복약하셔야 할 약이 있습니다.</string>

    <string name="message_on_throw_database_fault">알람 데이터베이스 로드 실패! [code: THROW_DATABASE_FAULT]</string>
    <string name="message_on_create_where_no_alarm">설정된 복약 알람이 없습니다.</string>
    <string name="message_on_create_where_with_next_alarm">\'다음 복약 알람은 \'yyyy년 MM월 dd일 EE요일 a hh시 mm분\'입니다.\'</string>
    <string name="message_on_disable_all_alarms">알람이 모두 취소되었습니다.</string>
    <string name="message_on_exception_null_alarm_manager">시스템에 알람을 설정할 수 없습니다! [code: NULL_ALARM_MANAGER]</string>
    <string name="message_after_boot_next_alarm">\'[SPA] 다음 복약 알람은 \'yyyy년 MM월 dd일 EE요일 a hh시 mm분\'입니다.\'</string>

    // Login Activity 호진
    <string name="btn_login_login">로그인</string>
    <string name="tv_login_countdown">"남은 로그인 횟수: "</string>
    <string name="tv_login_register">회원가입</string>
    <string name="btn_register_register">회원가입</string>
    <string name="tv_register_already_registered">로그인 페이지로</string>
    <string name="btn_main_logout">로그아웃</string>

    <string name="tv_register_userdetails">세부사항을 입력해 주세요</string>
    <string name="checkbox_register_pregnancy">임신</string>
    <string name="checkbox_register_blood_pressure">고혈압</string>
    <string name="checkbox_register_diabetes">당뇨</string>

    <string name="tv_register_register_failed">회원가입에 실패했습니다!</string>

    <string name="tv_register_verify_email_sent">인증 메일이 전송되었습니다</string>
    <string name="tv_register_verify_email_sending_failed">인증 메일 전송에 실패했습니다</string>

    <string name="tv_login_failure">로그인에 실패했습니다</string>
    <string name="tv_login_success">로그인 성공</string>

    <string name="tv_common_id_is_empty">아이디를 입력해주세요!</string>
    <string name="tv_common_pw_is_empty">비밀번호를 입력해주세요!</string>
    <string name="tv_common_email_is_empty">이메일을 입력해주세요!</string>
    <string name="tv_common_age_is_empty">만 나이을 입력해주세요!</string>

    <string name="tv_login_waiting">로그인 중. 잠시만 기다려 주십시오.</string>
    <string name="tv_login_check_your_email">이메일을 확인해 주시기 바랍니다</string>
    <string name="tv_login_chance_left">"남은 시도 횟수: "</string>

    <!--    devjhp, merge on Sep. 13.-->
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_activity_button_took_pill">복약함</string>
    <string name="alarm_activity_button_didnot_take_pill">복약하지 않음</string>
    <string name="alarm_activity_button_shutdown">강제종료</string>

    <string name="extra_key_drugName">KEY_drugName</string>
    <string name="extra_key_prodCode">KEY_prodCode</string>
    <string name="extra_key_drugInfo">KEY_contents</string>
    <string name="extra_key_numDrug">KEY_numDrug</string>
    <string name="extra_key_NULL">KEY_NULL</string>
    <string name="tv_error">ERROR</string>
    <!--    done-->

</resources>
